--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,6 +6,7 @@
   "useTabs": false,
   "printWidth": 80,
   "plugins": [
-    "prettier-plugin-tailwindcss"
+    "prettier-plugin-tailwindcss",
+    "prettier-plugin-classnames"
   ]
 }
